--- a/playbook/tasks/setup_kube.yml
+++ b/playbook/tasks/setup_kube.yml
@@ -22,12 +22,29 @@
     filename: kubernetes.list
 
 - name: Install Kubernetes binaries
-  apt: 
+  apt:
     name: "{{ packages }}"
     state: present
     update_cache: yes
   vars:
     packages:
-      - kubelet 
-      - kubeadm 
+      - kubelet
+      - kubeadm
       - kubectl
+- name: Remove swapfile from /etc/fstab
+  mount:
+    name: "{{ item }}"
+    fstype: swap
+    state: absent
+  with_items:
+    - swap
+    - none
+- name: Disable swap
+  command: swapoff -a
+  when: ansible_swaptotal_mb > 0
+
+- name: Restart kubelet
+  service:
+    name: kubelet
+    daemon_reload: yes
+    state: restarted
